--- a/redis_sts.yaml
+++ b/redis_sts.yaml
@@ -4,6 +4,15 @@ metadata:
   name: redis
 spec:
   serviceName: redis
+  volumeClaimTemplates:
+    - metadata:
+        name: redis
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: 1Gi
   selector:
     matchLabels:
       app: redis
@@ -12,6 +21,10 @@ spec:
       labels:
         app: redis
     spec:
+      volumes:
+        - name: redis
+          persistentVolumeClaim:
+            claimName: redis
       containers:
         - name: main
           image: redis:8
@@ -24,3 +37,6 @@ spec:
             limits:
               cpu: 100m
               memory: 100Mi
+          volumeMounts:
+            - mountPath: /data
+              name: redis
