--- a/fe_ing.yaml
+++ b/fe_ing.yaml
@@ -8,10 +8,10 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - counter.lab0.sikademo.com
-      secretName: counter.lab0.sikademo.com-tls
+        - counter-manifests.lab0.sikademo.com
+      secretName: counter-manifests.lab0.sikademo.com-tls
   rules:
-    - host: counter.lab0.sikademo.com
+    - host: counter-manifests.lab0.sikademo.com
       http:
         paths:
           - path: /
